make javapackager work with sbt-build tooling